syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service ApplicantEducationService {
	rpc GetApplicantEducation(IdRequestApplicantEducation) returns (ApplicantEducationObj);
	rpc CreateApplicantEducation(ApplicantEducationObjs) returns (google.protobuf.Empty);
	rpc UpdateApplicantEducation(ApplicantEducationObjs) returns (google.protobuf.Empty);
	rpc DeleteApplicantEducation(ApplicantEducationObjs) returns (google.protobuf.Empty);
}

message IdRequestApplicantEducation{
	string Id = 1;
}

message ApplicantEducationObj{		
	string Id = 1 ;
	string Applicant = 2; 
	string Major = 3;     
	string CertificateDiploma = 4;       
	google.protobuf.Timestamp StartDate = 5;      
	google.protobuf.Timestamp CompletionDate = 6;     
	int32 CompletionPercent = 7;
}

message ApplicantEducationObjs{
	repeated ApplicantEducationObj Obj = 1;
}